# line-detection-association-dockers

./: .gitignore  README.md
AFM/: Dockerfile  README.md  adapter.py  run.py
Cannlylines/: README.md  adapter.py  requirements.txt  run.py
Cannylines/: Dockerfile  README.md
Deep-Hough-Transform-Line-Priors/ht-lcnn/: README.md  adapter.py  run.py
Deep-Hough-Transform-Line-Priors/ht-lcnn/lcnn/: line_dataset.py
EDLines/: README.md  adapter.py  requirements.txt
ELSED/: Dockerfile  README.md  run.py
ELSED/bindings/: CMakeLists.txt  pyelsed.cpp
F-Clip/: Dockerfile  README.md  adapter.py  run.py
F-Clip/FClip/: __init__.py  line_dataset.py
F-Clip/FClip/models/: pose_hrnet.py
FLD/: README.md
FSG/: .clang-format  README.md  adapter.py
FSG/bindings/: pyfsg.cpp
HAWP/: Dockerfile  README.md  adapter.py  run.py
HT-LCNN/: Dockerfile  README.md  adapter.py  run.py
HT-LCNN/lcnn/models/: line_vectorizer.py
HoughLines/: README.md  adapter.py
HoughLinesP/: README.md  adapter.py
KHT/: .gitignore  Dockerfile  README.md
KHT/cpp/cmake/: KHTConfig.cmake.in  KHTConfigVersion.cmake.in
KHT/cpp/example/: main.cpp
KHT/cpp/source/: kht.cpp  peak_detection.cpp
KHT/matlab/: CMakeLists.txt
KHT/matlab/example/: main.m
KHT/python/: setup.py
KHT/python/example/: main.ipynb  main.py
L-CNN/: README.md  adapter.py  run.py
L-CNN/lcnn/models/: line_vectorizer.py
LETR/: Dockerfile  README.md  adapter.py  requirements.txt  run.py
LETR/src/models/: backbone.py  letr.py  letr_stack.py  position_encoding.py
LSD/: README.md
LSDNet/: Dockerfile  README.md  run.py
LSDNet/lsd/: detect_lines.py
LSWMS/: CMakeLists.txt  LSWMS.cpp  README.md  main.cpp
M-LSD/: README.md  adapter.py  requirements.txt  run.py
SOLD2/: README.md  adapter.py  download_model.py
TP-LSD/: README.md  adapter.py  requirements.txt  run.py
TPLSD/: Dockerfile  README.md  adapter.py  model.py  run.py
TPLSD/dataset/: line_dataset.py
ULSD/: README.md  adapter.py  requirements.txt  run.py
associators/: README.md
associators/DLD/: Dockerfile  README.md  adapter.py  cld.py  requirements.txt  run.py
associators/DLD/cnn/: __init__.py  client.py  decoder.py  main.py  misc.py  plotter.py  resnet.py
associators/DLD/cnn/modules/: dataflow.py  fio.py  geometry.py  imagereader.py  lineprocessor.py  processingdata.py  term.py
associators/DLD/config/: base.yaml
associators/DLD/misc/: logger.py  main.py.lprof
associators/DLD/model/: model-dld.index
associators/LBD/: Dockerfile  README.md  adapter.py  requirements.txt  run.py
associators/LineTR/: Dockerfile  README.md  adapter.py  requirements.txt  run.py
associators/LineTR/assets/outputs/: 0000_0049_matches.npz  1547209651092689_1547644203250191_matches.npz  1547210127104550_1547644622437137_matches.npz  (+2 more)
associators/LineTR/config/: base.yaml
associators/LineTR/models/: line_process.py  line_transformer.py
associators/SOLD2/: Dockerfile  README.md  adapter.py  download_model.py  exp.py  requirements.txt  run.py
associators/WLD/: .gitignore  Dockerfile  README.md  __init__.py  adapter.py  cld.py  requirements.txt  run.py
associators/WLD/cnn/: default.conf  densenet.py  main.py  misc.py  resnet.py
associators/WLD/config/: base.yaml
associators/WLD/misc/: own_extract.lprof
associators/WLD/model/: model-4501600.index
associators/common/: device.py  frames_pair.py  image_metadata.py  parser.py  prediction.py
associators/common/adapter/: adapter_base.py  common_adapter.py  tensorflow_adapter.py  torch_adapter.py
associators/common/dataset/: collate.py  frame_pairs_dataset.py
common/: adapter_base.py  device.py  line_dataset.py  parser.py  prediction.py  transform.py
common/adapter/: adapter_base.py  common_adapter.py  tensorflow_adapter.py  torch_adapter.py
common/dataset/: collate.py
detectors/: README.md
detectors/AFM/: Dockerfile  README.md  adapter.py  requirements.txt
detectors/Cannylines/: Dockerfile  README.md  adapter.py  requirements.txt  run.py
detectors/DeepLSD/: Dockerfile  README.md  adapter.py  install.sh  requirements.txt  run.py
detectors/DeepLSD/config/: eval.yaml
detectors/EDLines/: Dockerfile  README.md  adapter.py  requirements.txt  run.py
detectors/ELSED/: CMakeLists.txt  Dockerfile  README.md  adapter.py
detectors/F-Clip/: Dockerfile  README.md  requirements.txt  test.py
detectors/F-Clip/config/: fclip_HG2.yaml
detectors/FLD/: Dockerfile  README.md  adapter.py
detectors/FSG/: CMakeLists.txt  Dockerfile  README.md
detectors/FSG/bindings/: CMakeLists.txt  pyfsg.cpp
detectors/HAWP/: Dockerfile  README.md  requirements.txt
detectors/HT-LCNN/: Dockerfile  README.md  adapter.py  requirements.txt  run.py
detectors/HoughLines/: Dockerfile  README.md
detectors/HoughLinesP/: Dockerfile  README.md  requirements.txt
detectors/KHT/: Dockerfile  README.md  adapter.py
detectors/KHT/cpp/: CMakeLists.txt
detectors/KHT/cpp/example/: CMakeLists.txt
detectors/KHT/python/: CMakeLists.txt
detectors/KHT/python/source/: kht.cpp
detectors/L-CNN/: Dockerfile  README.md  adapter.py  requirements.txt
detectors/LETR/: Dockerfile  README.md  download_model.py  requirements.txt
detectors/LSD/: Dockerfile  README.md  adapter.py
detectors/LSDNet/: Dockerfile  README.md  adapter.py  requirements.txt
detectors/LSDNet/devops/: Dockerfile
detectors/LSWMS/: .clang-tidy  CMakeLists.txt  Dockerfile  README.md  adapter.py  requirements.txt
detectors/LSWMS/bindings/: CMakeLists.txt  pylswms.cpp
detectors/M-LSD/: Dockerfile  README.md  requirements.txt  run.py
detectors/SOLD2/: Dockerfile  README.md  requirements.txt  run.py
detectors/TP-LSD/: Dockerfile  README.md  requirements.txt
detectors/ULSD/: Dockerfile  README.md  requirements.txt  run.py
detectors/common/: device.py  image_metadata.py  parser.py  prediction.py
detectors/common/adapter/: common_adapter.py  tensorflow_adapter.py
detectors/common/dataset/: line_dataset.py
hawp/: Dockerfile  README.md  adapter.py  line_dataset.py  run.py
lcnn/: Dockerfile  README.md  adapter.py  run.py
(+23 files in other folders)
